--- a/stats-preview-card-component/style.css
+++ b/stats-preview-card-component/style.css
@@ -92,7 +92,7 @@ body {
   color: var(--stat-name-color);
 }
 
-@media all and (min-width: 425px) {
+@media screen and (min-width: 425px) {
   .stats {
     flex-direction: row;
     margin-top: 4rem;
@@ -100,7 +100,7 @@ body {
   }
 }
 
-@media all and (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .container {
     flex-direction: row-reverse;
   }
